--- a/draft/p.tex
+++ b/draft/p.tex
@@ -22,7 +22,7 @@
 \usepackage{booktabs}
 \usepackage{array,underscore,relsize}
 \usepackage[T1]{fontenc}
-\usepackage{times}
+% \usepackage{times}
 \usepackage{fancyhdr,lastpage}
 \usepackage{enumitem}
 % Makes sigplanconf throw warning.
