small invariant bugs

--- a/draft/evaluation.tex
+++ b/draft/evaluation.tex
@@ -72,7 +72,7 @@ partial equivalence:
   \alpha_0^3 + 1 = \alpha_1^2 \implies %
   \nu_0 = \nu_1) \land \\
   % for establishing final property:
-  & (\cc{n}_0 = \cc{n}_1 \land \cc{i}_0 \land %
+  & (\cc{n}_0 = \cc{n}_1 \land %
   \alpha_0^0 = \alpha_0^1 + \alpha_1^1 \land %
   \alpha_0^1 = \alpha_1^1 \land %
   \alpha_0^3 = \alpha_1^2 \implies %
@@ -97,7 +97,7 @@ partial equivalence:
   \cc{i}_3 = \cc{i}_1 \implies %
   \nu_0 = \nu_1) \\
   % fixpoint body guards:
-  (\cc{8}, \cc{8}) \mapsto & \cc{i}_1 - \cc{i}_0 \leq 1 \implies %
+  (\cc{8}, \cc{8}) \mapsto & 0 \leq \cc{i}_1 - \cc{i}_0 \leq 1 \implies %
   \nu_0 = \nu_1 \\
   % fixpoint body then expressions:
   (\cc{9}, \cc{9}) \mapsto & 
