--- a/draft/p.tex
+++ b/draft/p.tex
@@ -69,6 +69,10 @@
 % abstract.tex: DEP, contains abstract
 \input{abstract}
 
+\input{background}
+
+\input{approach}
+
 \input{evaluation}
 
 \input{related-work}
