--- a/draft/background.tex
+++ b/draft/background.tex
@@ -1,8 +1,33 @@
 \section{Background}
 \label{sec:background}
+%
+In this section, we define as our target language an extension of the
+simply-typed $\lambda$-calculus (STLC) (\autoref{sec:stlc}).
+%
+We then define partial equivalence of STLC programs
+(\autoref{sec:peq}).
+
+\subsection{The simply-typed $\lambda$-calculus}
+\label{sec:stlc}
+
+\BH{define fixed space of variables}
 
 \BH{define STLC with integers, Booleans, arithmetic operators, and
   fixpoint}
+
+\BH{define free variables of each expression}
+
+\BH{define STLC as space of closed expressions}
+
+\BH{define subexpressions of a program}
+
+\BH{define stepsto relations over expressions. Sub-expression
+  relations, except for with fixed-point expressions.}
+
+\subsection{Partial equivalence of STLC programs}
+\label{sec:peq}
+
+\BH{define equivalence of STLC programs}
 
 %%% Local Variables: 
 %%% mode: latex
