--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,4 +1,23 @@
 % shorthand: paper-specific shorthand
+\newcommand{\exprs}{\mathsf{Exprs}}
+
+\newcommand{\formulas}[1]{\mathsf{Forms}[ #1 X]}
+
+\newcommand{\freevars}{\mathsf{FreeVars}}
+
+\newcommand{\stepsto}[1]{\rightarrow_{ #1 }}
+
+\newcommand{\stlc}{\mathsf{STLC}}
+
+\newcommand{\subexps}{\mathsf{SubExps}}
+
+\newcommand{\symrels}{\mathsf{SymRels}}
+
+\newcommand{\symstep}[3]{\psi[ #1, #2, #3 ]}
+
+\newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
+
+\newcommand{\vars}{\mathsf{Vars}}
 
 %%% Local Variables: 
 %%% mode: latex
