--- a/draft/evaluation.tex
+++ b/draft/evaluation.tex
@@ -48,6 +48,8 @@ $n$ is less than or equal to one, then the solution is one.
 \cc{climbStairs0} and \cc{climbStairs1} have the following proof of
 partial equivalence:
 %
+\BH{put the pairs of subexpressions in a set}
+%
 \begin{align*}
   % pair of main subexpressions:
   (\cc{0}, \cc{0}) \mapsto & %
