background: adds standard defns for logic

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -90,7 +90,7 @@ inputs, and they imply that $P_0$ and $P_1$ return equal values.
   \BH{give example relational invariants}
 \end{ex}
 
-%
+% evidence is a valid proof of partial equivalence:
 If there is evidence of the equivalence of $P_0$ and $P_1$, then $P_0
 \equiv P_1$.
 %
