--- a/draft/p.bib
+++ b/draft/p.bib
@@ -1,3 +1,11 @@
+@inproceedings{demoura08,
+  author    = {Leonardo Mendon{\c{c}}a de Moura and
+               Nikolaj Bj{\o}rner},
+  title     = {{Z3:} An Efficient {SMT} Solver},
+  booktitle = {{TACAS}},
+  year      = {2008},
+}
+
 @inproceedings{jhala11,
   author    = {Ranjit Jhala and
                Rupak Majumdar and
@@ -6,4 +14,11 @@
                   Interpreters},
   booktitle = {{CAV}},
   year      = {2011},
+}
+
+@inproceedings{mcmillan04,
+  author    = {Kenneth L. McMillan},
+  title     = {An Interpolating Theorem Prover},
+  booktitle = {{TACAS}},
+  year      = {2004},
 }
