--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,6 +1,8 @@
 % shorthand: paper-specific shorthand
 \newcommand{\const}{\mathsf{Const}}
 
+\newcommand{\degreeof}{\mathsf{deg}}
+
 \newcommand{\evalsto}{\Downarrow}
 
 \newcommand{\expr}{\mathsf{Expr}}
@@ -9,9 +11,13 @@
 
 \newcommand{\freevars}{\mathsf{FreeVars}}
 
+\newcommand{\issat}{\textsc{IsSat}\xspace}
+
 \newcommand{\ops}{\mathsf{ops}}
 
 \newcommand{\relinvs}{\mathsf{RelInvs}}
+
+\newcommand{\solveitp}{\textsc{SolveItp}\xspace}
 
 \newcommand{\stepsto}[1]{\rightarrow_{ #1 }}
 
@@ -28,6 +34,8 @@
 \newcommand{\values}{\mathsf{Values}}
 
 \newcommand{\vars}{\mathsf{Vars}}
+
+\newcommand{\vocab}{\mathsf{Vocab}}
 
 %%% Local Variables: 
 %%% mode: latex
