--- a/draft/p.tex
+++ b/draft/p.tex
@@ -34,6 +34,8 @@
 % algorithm2e: algorithms
 \usepackage[linesnumbered]{algorithm2e}
 
+\usepackage{floatrow}
+
 % semantic: inference rules
 \usepackage{semantic}
 
