--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,4 +1,6 @@
 % shorthand: paper-specific shorthand
+\newcommand{\base}{\mathsf{Base}}
+
 \newcommand{\const}{\mathsf{Const}}
 
 \newcommand{\degreeof}{\mathsf{deg}}
@@ -30,6 +32,8 @@
 \newcommand{\symstep}[2]{\psi[ #1 ; #2 ]}
 
 \newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
+
+\newcommand{\types}{\mathsf{Types}}
 
 \newcommand{\values}{\mathsf{Values}}
 
